deploy: df9effd64263a7a629187b4d38345eb162cfe155

--- a/2024-08-this-month-in-reactive-graph.html
+++ b/2024-08-this-month-in-reactive-graph.html
@@ -25,7 +25,8 @@
 
         <!-- Fonts -->
         <link rel="stylesheet" href="FontAwesome/css/font-awesome.css">
-        <link rel="stylesheet" href="fonts/fonts.css">
+          <link rel="stylesheet" href="fonts/fonts.css">
+          <link rel="stylesheet" href="fonts/tabler-icons.css">
 
         <!-- Highlight.js Stylesheets -->
         <link rel="stylesheet" href="highlight.css">
@@ -36,7 +37,6 @@
         <link rel="stylesheet" href="./src/design/public/css/open-props.min.css">
         <link rel="stylesheet" href="./src/design/public/css/open-props-buttons.min.css">
         <link rel="stylesheet" href="./src/design/public/css/open-props-normalize.min.css">
-        <link rel="stylesheet" href="./src/design/public/fonts/fonts.css">
         <link rel="stylesheet" href="./src/design/public/css/variables/palette.css">
         <link rel="stylesheet" href="./src/design/public/css/variables/gradients.css">
         <link rel="stylesheet" href="./src/design/public/css/variables/surface.css">
@@ -159,19 +159,24 @@
                         </a>
                     </div>
                     <div>
+                        <a href="https://floss.social/@reactive_graph" title="Mastodon" aria-label="Mastodon">
+                            <img src="images/brand-mastodon.svg" alt="Mastodon">
+                        </a>
+                    </div>
+                    <div>
                         <a href="/rss.xml" title="RSS Feed">
                             <img src="images/rss.svg" alt="RSS Feed">
                         </a>
                     </div>
                     <div>
-                        <a href="https://github.com/reactive-graph/this-month-in-reactive-graph/edit/main/src/2024-08-31-this-month-in-reactive-graph.md" title="Suggest an edit" aria-label="Suggest an edit">
+                        <a href="https://github.com/reactive-graph/this-month-in-reactive-graph/edit/main/src/2024-08-this-month-in-reactive-graph.md" title="Suggest an edit" aria-label="Suggest an edit">
                             <img src="images/pencil.svg" alt="Git repository">
                         </a>
                     </div>
                 </div>
             </div>
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="2024.html"><strong aria-hidden="true">1.</strong> 2024</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="2024-08-31-this-month-in-reactive-graph.html" class="active"><strong aria-hidden="true">1.1.</strong> August 2024 in Reactive Graph</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="2024.html"><strong aria-hidden="true">1.</strong> 2024</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="2024-09-this-month-in-reactive-graph.html"><strong aria-hidden="true">1.1.</strong> September 2024 in Reactive Graph</a></li><li class="chapter-item expanded "><a href="2024-08-this-month-in-reactive-graph.html" class="active"><strong aria-hidden="true">1.2.</strong> August 2024 in Reactive Graph</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -231,7 +236,10 @@
                         <a href="https://www.facebook.com/reactive.graph" title="Facebook" aria-label="Facebook">
                             <img src="images/brand-facebook.svg" alt="Facebook" class="rg-header-icons">
                         </a>
-                        <a href="https://github.com/reactive-graph/this-month-in-reactive-graph/edit/main/src/2024-08-31-this-month-in-reactive-graph.md" title="Suggest an edit" aria-label="Suggest an edit">
+                        <a href="https://floss.social/@reactive_graph" title="Mastodon" aria-label="Mastodon">
+                            <img src="images/brand-mastodon.svg" alt="Mastodon" class="rg-header-icons">
+                        </a>
+                        <a href="https://github.com/reactive-graph/this-month-in-reactive-graph/edit/main/src/2024-08-this-month-in-reactive-graph.md" title="Suggest an edit" aria-label="Suggest an edit">
                             <img src="images/pencil.svg" alt="Search" class="rg-header-icons">
                         </a>
 
@@ -512,97 +520,15 @@ step we <span class="token rg-component">specified the requirements and the data
 <li>Start work on the Identity and Permission System</li>
 <li>Specify the Type System Persistence (<span class="token rg-component">Graph Relational Mapper</span>)</li>
 </ol>
-<hr class="surface-2">
-<div class="surface-2 rad-shadow rg-icon-grid">
-    <div>
-        <a href="https://creativecommons.org/licenses/by-sa/4.0/" title="Creative Commons Attribution-ShareAlike 4.0">
-            <img src="images/creative-commons.svg" alt="Creative Commons Attribution-ShareAlike 4.0">
-        </a>
-    </div>
-    <div>
-        <a href="https://creativecommons.org/licenses/by-sa/4.0/" title="Creative Commons Attribution-ShareAlike 4.0">
-            <img src="images/creative-commons-by.svg" alt="Creative Commons Attribution-ShareAlike 4.0">
-        </a>
-    </div>
-    <div>
-        <a href="https://creativecommons.org/licenses/by-sa/4.0/" title="Creative Commons Attribution-ShareAlike 4.0">
-            <img src="images/creative-commons-sa.svg" alt="Creative Commons Attribution-ShareAlike 4.0">
-        </a>
-    </div>
-</div>
-<hr class="surface-2">
-<footer>
-    <div class="card card--default">
-        <div class="rg-icon-grid">
-            <div></div>
-            <div>
-                <a href="/-this-month-in-reactive-graph.html" title="Previous Issue ()">
-                    <img src="images/caret-left.svg" alt="Next issue ()">
-                </a>
-            </div>
-            <div></div>
-        </div>
-    </div>
-    <div class="card card--default">
-        <div class="rg-icon-grid-1">
-            <div></div>
-            <div>
-                <a href="https://www.reactive-graph.io/" title="www.reactive-graph.io">
-                    <img src="design/public/logo/full/reactive-graph-full-mexican-pink-black_512.png" alt="www.reactive-graph.io" class="rg-icon-logo">
-                </a>
-            </div>
-            <div></div>
-        </div>
-    </div>
-    <div class="card card--default">
-        <div class="rg-icon-grid">
-            <div></div>
-            <div>
-                <a href="/rss.xml" title="RSS Feed">
-                    <img src="images/rss.svg" alt="RSS Feed">
-                </a>
-            </div>
-            <div></div>
-        </div>
-    </div>
-    <div class="card card--default">
-        <div class="rg-icon-grid">
-            <div>
-                <a href="https://creativecommons.org/licenses/by-sa/4.0/" title="Creative Commons Attribution-ShareAlike 4.0">
-                    <img src="images/cc.svg" alt="Creative Commons Attribution-ShareAlike 4.0">
-                </a>
-            </div>
-            <div>
-                <a href="https://creativecommons.org/licenses/by-sa/4.0/" title="Creative Commons Attribution-ShareAlike 4.0">
-                    <img src="images/by.svg" alt="Creative Commons Attribution-ShareAlike 4.0">
-                </a>
-            </div>
-            <div>
-                <a href="https://creativecommons.org/licenses/by-sa/4.0/" title="Creative Commons Attribution-ShareAlike 4.0">
-                    <img src="images/sa.svg" alt="Creative Commons Attribution-ShareAlike 4.0">
-                </a>
-            </div>
-        </div>
-    </div>
-    <div class="card card--default">
-        <div class="rg-icon-grid">
-            <div></div>
-            <div>
-                <a href="/2024-09-30-this-month-in-reactive-graph.html" title="Next Issue (2024-09-30)">
-                    <img src="images/caret-right.svg" alt="Next issue (2024-09-30)">
-                </a>
-            </div>
-            <div></div>
-        </div>
-    </div>
-</footer>
+<hr class="mexican-pink">
+<hr class="celestial-blue">
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="2024.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
-                                <i class="fa fa-angle-left"></i>
+                            <a rel="prev" href="2024-09-this-month-in-reactive-graph.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                <i class="ti ti-arrow-left"></i>
                             </a>
 
 
@@ -612,8 +538,8 @@ step we <span class="token rg-component">specified the requirements and the data
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="2024.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
-                        <i class="fa fa-angle-left"></i>
+                    <a rel="prev" href="2024-09-this-month-in-reactive-graph.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                        <i class="ti ti-arrow-left"></i>
                     </a>
 
             </nav>
