--- a/404.html
+++ b/404.html
@@ -26,7 +26,8 @@
 
         <!-- Fonts -->
         <link rel="stylesheet" href="FontAwesome/css/font-awesome.css">
-        <link rel="stylesheet" href="fonts/fonts.css">
+          <link rel="stylesheet" href="fonts/fonts.css">
+          <link rel="stylesheet" href="fonts/tabler-icons.css">
 
         <!-- Highlight.js Stylesheets -->
         <link rel="stylesheet" href="highlight.css">
@@ -37,7 +38,6 @@
         <link rel="stylesheet" href="./src/design/public/css/open-props.min.css">
         <link rel="stylesheet" href="./src/design/public/css/open-props-buttons.min.css">
         <link rel="stylesheet" href="./src/design/public/css/open-props-normalize.min.css">
-        <link rel="stylesheet" href="./src/design/public/fonts/fonts.css">
         <link rel="stylesheet" href="./src/design/public/css/variables/palette.css">
         <link rel="stylesheet" href="./src/design/public/css/variables/gradients.css">
         <link rel="stylesheet" href="./src/design/public/css/variables/surface.css">
@@ -160,6 +160,11 @@
                         </a>
                     </div>
                     <div>
+                        <a href="https://floss.social/@reactive_graph" title="Mastodon" aria-label="Mastodon">
+                            <img src="images/brand-mastodon.svg" alt="Mastodon">
+                        </a>
+                    </div>
+                    <div>
                         <a href="/rss.xml" title="RSS Feed">
                             <img src="images/rss.svg" alt="RSS Feed">
                         </a>
@@ -167,7 +172,7 @@
                 </div>
             </div>
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="2024.html"><strong aria-hidden="true">1.</strong> 2024</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="2024-08-31-this-month-in-reactive-graph.html"><strong aria-hidden="true">1.1.</strong> August 2024 in Reactive Graph</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="2024.html"><strong aria-hidden="true">1.</strong> 2024</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="2024-09-this-month-in-reactive-graph.html"><strong aria-hidden="true">1.1.</strong> September 2024 in Reactive Graph</a></li><li class="chapter-item expanded "><a href="2024-08-this-month-in-reactive-graph.html"><strong aria-hidden="true">1.2.</strong> August 2024 in Reactive Graph</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -226,6 +231,9 @@
                         </a>
                         <a href="https://www.facebook.com/reactive.graph" title="Facebook" aria-label="Facebook">
                             <img src="images/brand-facebook.svg" alt="Facebook" class="rg-header-icons">
+                        </a>
+                        <a href="https://floss.social/@reactive_graph" title="Mastodon" aria-label="Mastodon">
+                            <img src="images/brand-mastodon.svg" alt="Mastodon" class="rg-header-icons">
                         </a>
 
                     </div>
