--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 
         <!-- Fonts -->
         <link rel="stylesheet" href="FontAwesome/css/font-awesome.css">
-        <link rel="stylesheet" href="fonts/fonts.css">
+          <link rel="stylesheet" href="fonts/fonts.css">
+          <link rel="stylesheet" href="fonts/tabler-icons.css">
 
         <!-- Highlight.js Stylesheets -->
         <link rel="stylesheet" href="highlight.css">
@@ -36,7 +37,6 @@
         <link rel="stylesheet" href="./src/design/public/css/open-props.min.css">
         <link rel="stylesheet" href="./src/design/public/css/open-props-buttons.min.css">
         <link rel="stylesheet" href="./src/design/public/css/open-props-normalize.min.css">
-        <link rel="stylesheet" href="./src/design/public/fonts/fonts.css">
         <link rel="stylesheet" href="./src/design/public/css/variables/palette.css">
         <link rel="stylesheet" href="./src/design/public/css/variables/gradients.css">
         <link rel="stylesheet" href="./src/design/public/css/variables/surface.css">
@@ -159,6 +159,11 @@
                         </a>
                     </div>
                     <div>
+                        <a href="https://floss.social/@reactive_graph" title="Mastodon" aria-label="Mastodon">
+                            <img src="images/brand-mastodon.svg" alt="Mastodon">
+                        </a>
+                    </div>
+                    <div>
                         <a href="/rss.xml" title="RSS Feed">
                             <img src="images/rss.svg" alt="RSS Feed">
                         </a>
@@ -171,7 +176,7 @@
                 </div>
             </div>
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="2024.html" class="active"><strong aria-hidden="true">1.</strong> 2024</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="2024-08-31-this-month-in-reactive-graph.html"><strong aria-hidden="true">1.1.</strong> August 2024 in Reactive Graph</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="2024.html" class="active"><strong aria-hidden="true">1.</strong> 2024</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="2024-09-this-month-in-reactive-graph.html"><strong aria-hidden="true">1.1.</strong> September 2024 in Reactive Graph</a></li><li class="chapter-item expanded "><a href="2024-08-this-month-in-reactive-graph.html"><strong aria-hidden="true">1.2.</strong> August 2024 in Reactive Graph</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -231,6 +236,9 @@
                         <a href="https://www.facebook.com/reactive.graph" title="Facebook" aria-label="Facebook">
                             <img src="images/brand-facebook.svg" alt="Facebook" class="rg-header-icons">
                         </a>
+                        <a href="https://floss.social/@reactive_graph" title="Mastodon" aria-label="Mastodon">
+                            <img src="images/brand-mastodon.svg" alt="Mastodon" class="rg-header-icons">
+                        </a>
                         <a href="https://github.com/reactive-graph/this-month-in-reactive-graph/edit/main/src/2024.md" title="Suggest an edit" aria-label="Suggest an edit">
                             <img src="images/pencil.svg" alt="Search" class="rg-header-icons">
                         </a>
@@ -267,7 +275,8 @@
 </section>
 <h2 id="topics"><a class="header" href="#topics">Topics</a></h2>
 <div class="table-wrapper"><table><thead><tr><th>Issue</th><th>Topics</th></tr></thead><tbody>
-<tr><td><a href="./2024-08-31-this-month-in-reactive-graph.html">August 2024</a></td><td>Manage Type System via Command Line Interface, Java GraphQL Client POC, Specification of the Identity and Permission System</td></tr>
+<tr><td><a href="https://this-month-in.reactive-graph.io/2024-09-this-month-in-reactive-graph.html">September 2024</a></td><td>Stable rust, Improved CI, Improved CLI, Project Maintenance</td></tr>
+<tr><td><a href="./2024-08-this-month-in-reactive-graph.html">August 2024</a></td><td>Manage Type System via Command Line Interface, Java GraphQL Client POC, Specification of the Identity and Permission System</td></tr>
 </tbody></table>
 </div>
                     </main>
@@ -275,8 +284,8 @@
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
 
-                            <a rel="next prefetch" href="2024-08-31-this-month-in-reactive-graph.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                                <i class="fa fa-angle-right"></i>
+                            <a rel="next prefetch" href="2024-09-this-month-in-reactive-graph.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                                <i class="ti ti-arrow-right"></i>
                             </a>
 
                         <div style="clear: both"></div>
@@ -286,8 +295,8 @@
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
 
-                    <a rel="next prefetch" href="2024-08-31-this-month-in-reactive-graph.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                        <i class="fa fa-angle-right"></i>
+                    <a rel="next prefetch" href="2024-09-this-month-in-reactive-graph.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                        <i class="ti ti-arrow-right"></i>
                     </a>
             </nav>
 
