deploy: e8a5897a96ace0fc38dcd643d339ddbdb04a02f2

--- a/2024-09-this-month-in-reactive-graph.html
+++ b/2024-09-this-month-in-reactive-graph.html
@@ -175,7 +175,7 @@
                 </div>
             </div>
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="2024.html"><strong aria-hidden="true">1.</strong> 2024</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="2024-09-this-month-in-reactive-graph.html" class="active"><strong aria-hidden="true">1.1.</strong> September 2024 in Reactive Graph</a></li><li class="chapter-item expanded "><a href="2024-08-this-month-in-reactive-graph.html"><strong aria-hidden="true">1.2.</strong> August 2024 in Reactive Graph</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="2024.html"><strong aria-hidden="true">1.</strong> 2024</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="2024-10-this-month-in-reactive-graph.html"><strong aria-hidden="true">1.1.</strong> October 2024 in Reactive Graph</a></li><li class="chapter-item expanded "><a href="2024-09-this-month-in-reactive-graph.html" class="active"><strong aria-hidden="true">1.2.</strong> September 2024 in Reactive Graph</a></li><li class="chapter-item expanded "><a href="2024-08-this-month-in-reactive-graph.html"><strong aria-hidden="true">1.3.</strong> August 2024 in Reactive Graph</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -784,7 +784,7 @@ $ reactive-graph client relation-instances get &lt;namespace&gt; &lt;type_name&g
 </code></pre>
 <p>Profit!</p>
 <details>
-<summary><code>$ reactive-graph --</code> <span class="token rg-entity-type">Press TAB</span></summary>
+<summary><code>$ reactive-graph --</code> <kbd>TAB</kbd></summary>
 <pre><code>--daemon-group               -- If set will drop privileges to the specified group. Note: Both must be given: user and group
 --daemon                     -- If true, the process will run as daemon
 --daemon-name                -- Sets the name of the daemon
@@ -985,7 +985,7 @@ manually.</p>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="2024.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="2024-10-this-month-in-reactive-graph.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="ti ti-arrow-left"></i>
                             </a>
 
@@ -999,7 +999,7 @@ manually.</p>
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="2024.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="2024-10-this-month-in-reactive-graph.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="ti ti-arrow-left"></i>
                     </a>
 
