--- a/2024-08-this-month-in-reactive-graph.html
+++ b/2024-08-this-month-in-reactive-graph.html
@@ -175,7 +175,7 @@
                 </div>
             </div>
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="2024.html"><strong aria-hidden="true">1.</strong> 2024</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="2024-09-this-month-in-reactive-graph.html"><strong aria-hidden="true">1.1.</strong> September 2024 in Reactive Graph</a></li><li class="chapter-item expanded "><a href="2024-08-this-month-in-reactive-graph.html" class="active"><strong aria-hidden="true">1.2.</strong> August 2024 in Reactive Graph</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="2024.html"><strong aria-hidden="true">1.</strong> 2024</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="2024-10-this-month-in-reactive-graph.html"><strong aria-hidden="true">1.1.</strong> October 2024 in Reactive Graph</a></li><li class="chapter-item expanded "><a href="2024-09-this-month-in-reactive-graph.html"><strong aria-hidden="true">1.2.</strong> September 2024 in Reactive Graph</a></li><li class="chapter-item expanded "><a href="2024-08-this-month-in-reactive-graph.html" class="active"><strong aria-hidden="true">1.3.</strong> August 2024 in Reactive Graph</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
