--- a/2024.html
+++ b/2024.html
@@ -175,7 +175,7 @@
                 </div>
             </div>
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="2024.html" class="active"><strong aria-hidden="true">1.</strong> 2024</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="2024-09-this-month-in-reactive-graph.html"><strong aria-hidden="true">1.1.</strong> September 2024 in Reactive Graph</a></li><li class="chapter-item expanded "><a href="2024-08-this-month-in-reactive-graph.html"><strong aria-hidden="true">1.2.</strong> August 2024 in Reactive Graph</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="2024.html" class="active"><strong aria-hidden="true">1.</strong> 2024</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="2024-10-this-month-in-reactive-graph.html"><strong aria-hidden="true">1.1.</strong> October 2024 in Reactive Graph</a></li><li class="chapter-item expanded "><a href="2024-09-this-month-in-reactive-graph.html"><strong aria-hidden="true">1.2.</strong> September 2024 in Reactive Graph</a></li><li class="chapter-item expanded "><a href="2024-08-this-month-in-reactive-graph.html"><strong aria-hidden="true">1.3.</strong> August 2024 in Reactive Graph</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -285,6 +285,7 @@
 </section>
 <h2 id="topics"><a class="header" href="#topics">Topics</a></h2>
 <div class="table-wrapper"><table><thead><tr><th>Issue</th><th>Topics</th></tr></thead><tbody>
+<tr><td><a href="https://this-month-in.reactive-graph.io/2024-10-this-month-in-reactive-graph.html">October 2024</a></td><td>Self Updater, Release Process, Nightly Builds, Platform Support, Docker Images, Debian Packages, CLI Instance Management</td></tr>
 <tr><td><a href="https://this-month-in.reactive-graph.io/2024-09-this-month-in-reactive-graph.html">September 2024</a></td><td>Stable rust, Improved CI, Improved CLI, Project Maintenance</td></tr>
 <tr><td><a href="./2024-08-this-month-in-reactive-graph.html">August 2024</a></td><td>Manage Type System via Command Line Interface, Java GraphQL Client POC, Specification of the Identity and Permission System</td></tr>
 </tbody></table>
@@ -294,7 +295,7 @@
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
 
-                            <a rel="next prefetch" href="2024-09-this-month-in-reactive-graph.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="2024-10-this-month-in-reactive-graph.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="ti ti-arrow-right"></i>
                             </a>
 
@@ -305,7 +306,7 @@
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
 
-                    <a rel="next prefetch" href="2024-09-this-month-in-reactive-graph.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="2024-10-this-month-in-reactive-graph.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="ti ti-arrow-right"></i>
                     </a>
             </nav>
